加入单独文本框实时校验
配置json 时，传入参数 realTime:false

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 					rules: [{
 						reg: zz.notNull(),
 						tips: "密码不能为空"
-					}]
+					}],
+					realTime:false
 				}, {
 					id: "pswd2",
 					tid: "tpswd2",
