更严格的开发者模式提示

--- a/index.html
+++ b/index.html
@@ -99,7 +99,8 @@
 					},{
 						reg:zz.ffzs(),
 						tips:"请输入正确的年龄"
-					}]
+					}],
+					realTime:false
 				},{
 					id: "mainBody",
 					tid: "tmainBody",
@@ -130,7 +131,7 @@
 				nihao: "你好"
 			};
 			var circulaterData = {
-				woyehao: "我也好"
+				woyehao: "我很好"
 			};
 			return {
 				'fileData': JSON.stringify(fileData),
