--- a/index.html
+++ b/index.html
@@ -145,9 +145,8 @@
 				ifAjax: true, // 是否使用ajax 提交 true/false/ 跨域ajax jsonp
 				realTime: true, // 实时 onblur 校验 true/false
 				ifLayer: true, // 是否 使用 layer true/false
-				ifImg: true, // 提示语 是否使用感叹号图标 true/false
-				ImgUrl: "img/error.png", // 感叹号图标url地址
-				AutoScroll: [true, 0], // 第一个不通过校验的文本框，自动滚动到该位置  true/false  ,第二个参数，距离顶部像素
+				ifImg: [true,"img/error.png"], // 提示语 是否使用感叹号图标 true/false  感叹号图标url地址  
+				AutoScroll: [true,0], // 第一个不通过校验的文本框，自动滚动到该位置  true/false  ,第二个参数，距离顶部像素
 				submitSpecialData: true // ajax提交时，另外加的特殊参数,true/false   写一个 function specialData(){return {'a':'asd','b':'sdf'}}
 			});
 		});
