--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>表单校验插件</title>
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="layui/layui.all.js"></script>
-		<script type="text/javascript" src="js/my_validate_1.1.js"></script>
+		<script type="text/javascript" src="js/my_validate_1.2.js"></script>
 		<link rel="stylesheet" href="layui/css/layui.css" />
 	</head>
 	<style>
@@ -114,9 +114,9 @@
 			];
 			return checkJson;
 		}
-
-		function checkPswd() {
-			if($("#pswd").val() == $("#pswd2").val()) {
+		
+		function checkPswd(t) {
+			if($("#pswd").val() == t.val()) {
 				return true;
 			} else {
 				return false;
@@ -143,8 +143,8 @@
 				subId: "subId", // 提交按钮 id
 				formId: "formId", // form 表单 id
 				ifAjax: true, // 是否使用ajax 提交 true/false/ 跨域ajax jsonp
-				realTime: true, // 实时 onblur 校验 true/false
-				ifLayer: true, // 是否 使用 layer true/false
+				realTime: [true,'blur-input'], // 实时  校验 true/false,多个 使用  - 连接
+				ifLayer: true, // 是否 使用 layer弹出层校验提示  true/false
 				ifImg: [true,"img/error.png"], // 提示语 是否使用感叹号图标 true/false  感叹号图标url地址  
 				AutoScroll: [true,0], // 第一个不通过校验的文本框，自动滚动到该位置  true/false  ,第二个参数，距离顶部像素
 				submitSpecialData: true // ajax提交时，另外加的特殊参数,true/false   写一个 function specialData(){return {'a':'asd','b':'sdf'}}
