中英文长度
增加中英文长度校验，汉字占两个字节

--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
 				ifImg: [true,"img/error.png"], // 提示语 是否使用感叹号图标 true/false  感叹号图标url地址  
 				AutoScroll: [true,0], // 第一个不通过校验的文本框，自动滚动到该位置  true/false  ,第二个参数，距离顶部像素
 				submitSpecialData: true, // ajax提交时，另外加的特殊参数,true/false   写一个 function specialData(){return {'a':'asd','b':'sdf'}}
-				confirmSub:[true,'确认提交吗？','确认保存吗？']   // 弹出层提示，校验通过后，询问是否提交   submitOrSave=1 confirmSub[1] , submitOrSave=2 confirmSub[2] 
+				confirmSub:[true,'确认提交吗？',''], // 弹出层提示，校验通过后，询问是否提交   submitOrSave=1 confirmSub[1] , submitOrSave=2 confirmSub[2] 
+				chineseLenth:false   // 长度校验开启中英文（汉字占两个字节） true 开启 ，false 关闭 
 			});
 		});
 	</script>
