--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 				<button class="layui-btn" type="button" id="subId" submitOrSave='1'>提交</button>  
 				&nbsp;&nbsp;&nbsp;
 				<button class="layui-btn" type="button" id="subId2" submitOrSave='2'>保存</button>
+				&nbsp;&nbsp;&nbsp;
+				<button class="layui-btn" type="button" id="subId3" submitOrSave='3'>删除</button>
 			</center>
 		</form>
 	</body>
@@ -146,15 +148,15 @@
 		$(function() {
 			$().my_validate({
 				DeveloperMode: true, // 开发者模式 true/false,可以找到基本配置错误
-				subId: "subId,subId2", // 提交按钮 id ,多个按钮可以用逗号隔开
+				subId: "subId,subId2,subId3", // 提交按钮 id ,多个按钮可以用逗号隔开
 				formId: "formId", // form 表单 id
 				ifAjax: true, // 是否使用ajax 提交 true/false/ 跨域ajax jsonp
 				realTime: [true,'blur-input'], // 实时  校验 true/false,多个 使用  - 连接
-				ifLayer: true, // 是否 使用 layer弹出层校验提示  true/false
+				ifLayer: false, // 是否 使用 layer弹出层校验提示  true/false
 				ifImg: [true,"img/error.png"], // 提示语 是否使用感叹号图标 true/false  感叹号图标url地址  
 				AutoScroll: [true,0], // 第一个不通过校验的文本框，自动滚动到该位置  true/false  ,第二个参数，距离顶部像素
 				submitSpecialData: true, // ajax提交时，另外加的特殊参数,true/false   写一个 function specialData(){return {'a':'asd','b':'sdf'}}
-				confirmSub:[true,'确认提交吗？',''], // 弹出层提示，校验通过后，询问是否提交   submitOrSave=1 confirmSub[1] , submitOrSave=2 confirmSub[2] 
+				confirmSub:[true,'确认提交吗？','确认保存吗？','确认删除吗？'], // 弹出层提示，校验通过后，询问是否提交   submitOrSave=1 confirmSub[1] , submitOrSave=2 confirmSub[2] 
 				chineseLenth:false   // 长度校验开启中英文（汉字占两个字节） true 开启 ，false 关闭 
 			});
 		});
